[package]
name = "otel-arrow-hacking"
version = "0.1.0"
edition = "2024"

[dependencies]
# local
# otel-arrow-rust = { path = "../otel-arrow/rust/otel-arrow-rust" }
otel-arrow-rust = { git = "https://github.com/albertlockett/otel-arrow", rev="9155b281d00ff67cb64cbe25672d6fea05c9a404"}

# external
arrow = { version = "55", features = ["prettyprint", "chrono-tz"] }
arrow-array = "55"
arrow-ipc = {version = "55", features = ["zstd"] }
datafusion = "47"
parquet = { version = "55", features = ["arrow", "async", "object_store"]}
object_store = "0.12"
prost = "~0.13"
tokio = { version = "1", features = ["full"] }
